Added filters CRUD
