# app/controllers/api/v1/filters_controller.rb
@@ -1,0 +1,9 @@
+class Api::V1::FiltersController < Api::BaseController
+
+  skip_before_action :authenticate_user!
+
+  def index
+    @filter = Filter.where(filter_id: nil)
+    render json: @filter
+  end
+end
